--- a/package.json
+++ b/package.json
@@ -22,8 +22,11 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
+  "homepage":"https://haegi-git.github.io/Membership-Management-Project/",
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -44,6 +47,7 @@
   },
   "devDependencies": {
     "@swc/plugin-styled-components": "^2.0.8",
-    "@types/styled-components": "^5.1.34"
+    "@types/styled-components": "^5.1.34",
+    "gh-pages": "^6.1.1"
   }
 }
